fix: Mobile image overflow

--- a/src/global.scss
+++ b/src/global.scss
@@ -236,10 +236,10 @@ p {
   box-sizing: border-box;
 
   @media (max-width: 744px) {
-    width: calc(100% + var(--spacing-8) + 4px);
+    width: calc(100% + var(--spacing-4));
     max-width: unset;
-    margin-left: calc(var(--spacing-4) * -1 - 1px);
-    margin-right: calc(var(--spacing-4) * -1 - 1px);
+    margin-left: calc(var(--spacing-2) * -1);
+    margin-right: calc(var(--spacing-2) * -1);
     padding: 0;
     border: 0;
   }
